Add users data API,  optimization of SQL requests
